syntax = "proto3";

option csharp_namespace = "EvMa.ECommerceLibrary.Grpc.Protos";

package catalog_service;

message GrpcProductAttribute {
	string id = 1;
	string name = 2;
	string type = 3;
}
